total fixed overflowing

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap");
 
+.main-contact {
+  overflow: hidden;
+}
 .contact h1 {
   font-size: 48px;
   font-weight: 500;
